fixed spacing about us

--- a/about.css
+++ b/about.css
@@ -15,7 +15,7 @@ body {
   }
   .w3-quarter{
     width: fit-content;
-    padding: 15px;
+    padding: 5px;
   }
   .column {
     float: left;
